--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         document.getElementsByTagName('p')[1].innerHTML = e.data;
     });
     document.getElementsByTagName('button')[0].addEventListener('click', function () {
-        window.postMessage('"Hello" from the web view');
+        window.postMessage('{data:' + messagesReceivedFromReactNative + }');
     });
 </script>
 </html>
