--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <title>Growth 技能树</title>
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <script src="lib/ionic/js/ionic.bundle.min.js"></script>
-    <script src="lib/localforage.min.js"></script>
-    <script src="lib/lodash.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/data.js"></script>
