--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <title>Growth 技能树</title>
   <link href="css/style.css" rel="stylesheet">
 
-  <script src="lib/ionic/js/ionic.bundle.min.js"></script>
-
-  <script src="js/app.js"></script>
+  <script src="lib/angular.min.js"></script>
   <script src="js/controllers.js"></script>
 </head>
 
-<body ng-app="starter" ng-controller="HomeCtrl">
+<body ng-controller="HomeCtrl">
 <ion-content>
   <ion-scroll zooming="true" direction="xy" ng-if="loadDataFinish">
     <svg  version="1.1" id="logo"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
