--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <link href="css/style.css" rel="stylesheet">
 
   <script src="lib/angular.min.js"></script>
-  <script src="js/controllers.js"></script>
 </head>
 
-<body ng-controller="HomeCtrl">
+<body ng-app="moTree" ng-controller="HomeCtrl">
 <ion-content>
   <ion-scroll zooming="true" direction="xy" ng-if="loadDataFinish">
     <svg  version="1.1" id="logo"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -906,5 +905,6 @@
   </svg>
   </ion-scroll>
 </ion-content>
+<script src="js/controllers.js"></script>
 </body>
 </html>
